Dynamic nav text color and card layout

--- a/index.html
+++ b/index.html
@@ -26,11 +26,23 @@
     <section>
       <h2>Create an account now</h2>
       <p>Choose your card</p>
-      <div class="card">
-        <div class="number">XXXX.XXXX.XXXX-XX</div>
-        <div class="exp-date">27/45</div>
-        <div class="name">An Original Name</div>
-        <div class="flag">Mastercard</div>
+      <div class="card gradient-bg">
+        <div class="card__header">
+          <div class="flag">Mastercard</div>
+        </div>
+        <div class="card__main">
+          <div class="number">XXXX XXXX XXXX XXXX</div>
+        </div>
+        <div class="card__footer">
+          <div>
+            <span class="card__footer__label">Name</span>
+            <span class="card__footer__value">An Original Name</span>
+          </div>
+          <div>
+            <span class="card__footer__label">Exp. Date</span>
+            <span class="card__footer__value">27 / 45</span>
+          </div>
+        </div>
       </div>
       <button type="button">Lets go!</button>
     </section>
