--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IND.Bank</title>
-  <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/lenis.css">
 </head>
 <body>
   <nav>
@@ -48,5 +49,8 @@
     </section>
   </main>
   <footer>IND.Bank by IND.Systems</footer>
+
+  <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
+  <script src="./scripts/lenis.js"></script>
 </body>
 </html>
