Add animation to title

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
   </header>
   <main>
     <section>
-      <h2>Create an account now</h2>
-      <p>Choose your card</p>
-      <div class="card gradient-bg">
+      <div class="title">
+        <h2 class="txt--fade-in">Create an account now</h2>
+        <p class="txt--fade-in">Choose your card</p>
+      </div>
+      <div class="card card--fade-in gradient-bg">
         <div class="card__header">
           <div class="flag">Mastercard</div>
         </div>
