--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   </nav>
   <header>
     <div>
-      <h1>We keep your money safe</h1>
-      <p>As simple as it sounds</p>
+      <h1 class="txt-to-animate">We keep your money safe</h1>
+      <p class="txt-to-animate">As simple as it sounds</p>
     </div>
   </header>
   <main>
     <section>
       <div class="title">
-        <h2 class="txt--fade-in">Create an account now</h2>
-        <p class="txt--fade-in">Choose your card</p>
+        <h2 class="txt-to-animate">Create your account now</h2>
+        <p class="txt-to-animate">Choose your card</p>
       </div>
       <div class="card card--fade-in gradient-bg">
         <div class="card__header">
@@ -52,7 +52,11 @@
   </main>
   <footer>IND.Bank by IND.Systems</footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
   <script src="./scripts/lenis.js"></script>
+  <script src="./scripts/main.js"></script>
 </body>
 </html>
