--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
   <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
   <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
   <script src="./scripts/lenis.js"></script>
   <script src="./scripts/main.js"></script>
