Card animation on gsap

--- a/index.html
+++ b/index.html
@@ -19,31 +19,33 @@
   </nav>
   <header>
     <div>
-      <h1 class="txt-to-animate">We keep your money safe</h1>
-      <p class="txt-to-animate">As simple as it sounds</p>
+      <h1 class="txt--animation">We keep your money safe</h1>
+      <p class="txt--animation">As simple as it sounds</p>
     </div>
   </header>
   <main>
     <section>
       <div class="title">
-        <h2 class="txt-to-animate">Create your account now</h2>
-        <p class="txt-to-animate">Choose your card</p>
+        <h2 class="txt--animation">Create your account now</h2>
+        <p class="txt--animation">Choose your card</p>
       </div>
-      <div class="card card--fade-in gradient-bg">
-        <div class="card__header">
-          <div class="flag">Mastercard</div>
-        </div>
-        <div class="card__main">
-          <div class="number">XXXX XXXX XXXX XXXX</div>
-        </div>
-        <div class="card__footer">
-          <div>
-            <span class="card__footer__label">Name</span>
-            <span class="card__footer__value">An Original Name</span>
+      <div class="card--animation">
+        <div class="card gradient-bg">
+          <div class="card__header">
+            <div class="flag">Mastercard</div>
           </div>
-          <div>
-            <span class="card__footer__label">Exp. Date</span>
-            <span class="card__footer__value">27 / 45</span>
+          <div class="card__main">
+            <div class="number">XXXX XXXX XXXX XXXX</div>
+          </div>
+          <div class="card__footer">
+            <div>
+              <span class="card__footer__label">Name</span>
+              <span class="card__footer__value">An Original Name</span>
+            </div>
+            <div>
+              <span class="card__footer__label">Exp. Date</span>
+              <span class="card__footer__value">27 / 45</span>
+            </div>
           </div>
         </div>
       </div>
