Organize files and change card orientation

--- a/index.html
+++ b/index.html
@@ -34,17 +34,10 @@
           <div class="card__header">
             <div class="flag">Mastercard</div>
           </div>
-          <div class="card__main">
-            <div class="number">XXXX XXXX XXXX XXXX</div>
-          </div>
           <div class="card__footer">
             <div>
               <span class="card__footer__label">Name</span>
               <span class="card__footer__value">An Original Name</span>
-            </div>
-            <div>
-              <span class="card__footer__label">Exp. Date</span>
-              <span class="card__footer__value">27 / 45</span>
             </div>
           </div>
         </div>
@@ -52,7 +45,11 @@
       <button type="button">Lets go!</button>
     </section>
   </main>
-  <footer>IND.Bank by IND.Systems</footer>
+  <footer>
+    <span class="footer__logo">IND.Bank</span>
+    &nbsp;by&nbsp;IND.Systems&nbsp;&ndash;&nbsp;
+    <span class="footer-year__txt">2024</span>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
@@ -61,5 +58,6 @@
   <script src="https://unpkg.com/lenis@1.1.5/dist/lenis.min.js"></script>
   <script src="./scripts/lenis.js"></script>
   <script src="./scripts/main.js"></script>
+  <script src="./scripts/animations.js"></script>
 </body>
 </html>
