Add shuffle effect

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
       <a href="#" class="logo">IND.Bank</a>
     </div>
     <div>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
+      <a href="#" class="text--shuffle">About</a>
+      <a href="#" class="text--shuffle">Contact</a>
     </div>
   </nav>
   <header>
-    <div>
-      <h1 class="txt--animation">We keep your money safe</h1>
-      <p class="txt--animation">As simple as it sounds</p>
+    <div class="txt--animation">
+      <h1 class="title">We keep your money safe</h1>
+      <p class="subtitle">As simple as it sounds</p>
     </div>
   </header>
   <main>
     <section>
-      <div class="title">
-        <h2 class="txt--animation">Create your account now</h2>
-        <p class="txt--animation">Choose your card</p>
+      <div class="txt--animation section__title--center">
+        <h2 class="title">Create your account now</h2>
+        <p class="subtitle">Choose your card</p>
       </div>
       <div class="card--animation">
         <div class="card gradient-bg">
@@ -37,7 +37,7 @@
           <div class="card__footer">
             <div>
               <span class="card__footer__label">Name</span>
-              <span class="card__footer__value">An Original Name</span>
+              <span class="card__footer__value text--shuffle">An Original Name</span>
             </div>
           </div>
         </div>
@@ -50,7 +50,8 @@
     &nbsp;by&nbsp;IND.Systems&nbsp;&ndash;&nbsp;
     <span class="footer-year__txt">2024</span>
   </footer>
-
+  
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/split-type@0.3.4/umd/index.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
