Fix card animations and change text

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <section>
       <div class="txt--animation section__title--center">
         <h2 class="title">Create your account now</h2>
-        <p class="subtitle">Choose your card</p>
+        <p class="subtitle">We fit your style</p>
       </div>
       <div class="card__container card--animation">
-        <div class="card card--animation-left black">
+        <div class="card card__primary card--animation-left">
           <div class="card__header">
             <div class="flag">Mastercard</div>
           </div>
@@ -41,7 +41,18 @@
             </div>
           </div>
         </div>
-        <div class="card card--animation-right black">
+        <div class="card card__secondary card--animation-center">
+          <div class="card__header">
+            <div class="flag">Mastercard</div>
+          </div>
+          <div class="card__footer">
+            <div>
+              <span class="card__footer__label">Name</span>
+              <span class="card__footer__value text--shuffle">An Original Name</span>
+            </div>
+          </div>
+        </div>
+        <div class="card card__tertiary card--animation-right">
           <div class="card__header">
             <div class="flag">Mastercard</div>
           </div>
