Start some changes on timelines

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
       <a href="#" class="text--shuffle">Contact</a>
     </div>
   </nav>
-  <header>
+  <header class="section--animation">
     <div class="header__txt--animation">
       <h1 class="title">We keep your money safe</h1>
       <p class="subtitle">As simple as it sounds</p>
     </div>
   </header>
   <main>
-    <section>
+    <section class="section--animation">
       <div class="txt--animation section__title--center">
         <h2 class="title">Create your account now</h2>
         <p class="subtitle">We fit your style</p>
